feat: project init
